--- a/src/components/Loading/loading.module.css
+++ b/src/components/Loading/loading.module.css
@@ -1,6 +1,8 @@
 .loadingContainer{
+    position: absolute;
+    z-index: 5;
     width: 100vw;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,4 +11,5 @@
     flex-direction: column;
     font-size: 25px;
     gap: 10px;
+    top: 0;
 }
