--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,36 +1,64 @@
-.container{
-    width: 100vw;
-    height: 50px;
-    background-color: white;
-    box-shadow: 0px 2px 5px black;
+
+
+.navContainer{
+  width: 100vw;
+  height: 50px;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
-.navItemContainer{
+.navLinks{
+  display: flex;
+  justify-content: space-evenly;
+  align-items:center;
+}
+
+.menuIcon{
+  display: none;
+}
+
+.signoutButton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  background: rgba(249, 64, 64, 0.76);
+  color: white;
+  border: 0px;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+
+@media screen and  (max-width:500px){
+  
+  .navContainer{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-}
-
-.navItem{
-    list-style: none;
-    font-size: clamp(14px,18px,22px);
-}
-
-.signoutButton {
-    background-color: #f44336; /* Red color for signout */
-    color: white;
-    padding: 8px 12px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s ease-in-out;
+    justify-content: end;
+  }
+  .navLinks{
+    display:none;
+  }
+  .menuIcon{
+    display: block;
+    border: 0px;
+    position: relative;
+    background-color: transparent;
+  }
+  .showMenu{
     display: flex;
+    width: 95vw;
+    min-height: 150px;
+    max-height: fit-content;
+    box-sizing: border-box;
+    position: absolute;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
+    z-index: 2;
+    top: 50px;
+    box-shadow: 1px 1px 2px black ;
+    gap: 5px;
+    background-color: rgb(255, 255, 255);
   }
-  
-  .signoutButton:hover {
-    background-color: #d32f2f; /* Darker red on hover */
-  }
+}
