--- a/src/components/userLogin/Login.module.css
+++ b/src/components/userLogin/Login.module.css
@@ -18,25 +18,30 @@
 }
 
 .title{
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .form{
-    padding: 50px;
-    min-width: 300px;
+    padding: 10px;
+    width: 80vw;
+    max-width: 500px;
     box-shadow: 1px 1px 5px black;
     border-radius: 15px;
-    max-width: 40vw;
+    max-width: 500px;
+    box-sizing: border-box;
+    height: fit-content;
 }
 .formTitle{
     text-align: center;
     margin: 10px auto;
+    font-size: 25px;
+
 }
 .errorMsg{
     color: red;
     font-weight: bold;
-    font-size: 20px;
     text-align: center;
 }
 .inpWrapper{
@@ -51,12 +56,13 @@
 }
 
 .formInput{
-    width: 100%;
-    height: 50px;
+    max-width: 300px;
+    min-width: 100px;
+    height: 25px;
     border: 0px;
-    font-size: 25px;
     margin-left: 5px;
     background: transparent;
+    padding: 5px;
 }
 .formInput:focus{
     outline: 0px;
@@ -66,7 +72,7 @@
     width: 100%;
     margin: auto;
     padding: 5px;
-    font-size: 22px;
+    font-size: 20px;
     border: 0px;
     border-radius: 5px;
     color: rgba(234, 111, 132, 0.718);
@@ -83,7 +89,6 @@
 
 .msg{
     text-align: center;
-    font-size: 20px;
     margin: 10px auto;
 }
 .navLink{
