--- a/src/components/displayDreams/displaydreams.module.css
+++ b/src/components/displayDreams/displaydreams.module.css
@@ -122,6 +122,17 @@ select.dreamCategory {
     transition: 0.3s ease-in-out;
 }
 
+.analysisButton {
+    background-color: #2196F3 ;
+    color: white;
+    padding: 6px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s ease-in-out;
+}
+
 .deleteButton {
     background-color: #f44336; 
     color: white;
@@ -136,7 +147,8 @@ select.dreamCategory {
 .editButton:hover,
 .saveButton:hover,
 .cancelButton:hover,
-.deleteButton {
+.deleteButton,
+.analysisButton:hover {
     opacity: 0.8;
 }
 
